hphp/hack/test/typecheck/as_expression/tuple2.php.exp
File "tuple2.php", line 7, characters 5-6:
Invalid argument (Typing[4110])
File "tuple2.php", line 3, characters 18-20:
Expected int
File "tuple2.php", line 6, characters 15-20:
But got string
